--- a/MyStyle.css
+++ b/MyStyle.css
@@ -1,53 +1,63 @@
 header, footer{
-    color: DarkCyan; /*teksti värv*/
-    background-color: MediumTurquoise; /*tasuta värv*/
-    width: 95%; /*laius*/
+    color: FloralWhite; /*teksti värv*/
+    background-color: CadetBlue; /*tausta värv*/
+    width: 50%; /*laius*/
     text-align: center;
-    border: solid 3pt DarkCyan; /*piir - solid, dashed, dotted, double*/
-    border-radius: 30px 50px 30px 50px;
+    border: solid 4pt DarkCyan; /*piir - dashed, dotted, double*/
+    border-radius: 60px 120px 60px 120px;
     padding: 1%;
-
-
-
-}
-header{
-    background-color: url("Nimetu.png");
+    background-image: url("paike.png");
     background-repeat: no-repeat;
+    background-position:left;
+    background-size: auto;
+    /* cover -mahub headeri sisse*/
 }
+
+
+
+div#koordinatid {
+    top: 200px;
+
+}
+
 main section {
-    background-color: SeaShell;
-    border: dashed 2pt DarkCyan;
-    margin: 20px 420px;
+    background-color: DeepSkyBlue;
+    border: dotted 4pt Cyan;
+    margin:5px;
     width: 40%;
     padding: 1%;
+    font-size: 16px;
+
 }
 main section h2{
-    color: DarkCyan;
-    font-variant: normal; /*normal, small-caps*/
+    color: red;
+    font-variant: small-caps; /*normal*/
 }
-
 nav ul {
     list-style-type: none; /*loetelu markerid*/
-    margin: 5px;
-    padding: 1%;
+    margin: 0;
+    padding: 0;
     overflow: hidden; /*kuidas näidata nav elemendid*/
-    background-color: DarkCyan;
+    background-color: DarkTurquoise;
+
 }
 
 nav li {
-    float:  left;
+    float: left;
+
 }
 
 nav li a {
     display: block; /*ühe realine navbar*/
-    color: MediumTurquoise;
+    color: white;
     text-align: center;
     padding: 14px 16px;
-    text-decoration: underline; /*underline*/
+    text-decoration: none; /*underline*/
+
 }
 
-nav li a:hover {  /*link fookuses*/
-    background-color: SeaShell;
+nav li a:hover { /*link fookuses*/
+    background-color: LightSkyBlue;
 }
 
 
