--- a/MyStyle.css
+++ b/MyStyle.css
@@ -1,19 +1,18 @@
-header, footer{
-    color: DarkCyan; /*teksti värv*/
-    background-color: MediumTurquoise; /*tasuta värv*/
-    width: 95%; /*laius*/
+header, footer {
+    color: DarkCyan;
+    background-color: MediumTurquoise;
+    width: 95%;
     text-align: center;
-    border: solid 3pt DarkCyan; /*piir - solid, dashed, dotted, double*/
+    border: solid 3pt DarkCyan;
     border-radius: 30px 50px 30px 50px;
     padding: 1%;
-
-
-
 }
-header{
+
+header {
     background-color: url("Nimetu.png");
     background-repeat: no-repeat;
 }
+
 main section {
     background-color: SeaShell;
     border: dashed 2pt DarkCyan;
@@ -21,33 +20,49 @@ main section {
     width: 40%;
     padding: 1%;
 }
-main section h2{
+
+main section h2 {
     color: DarkCyan;
-    font-variant: normal; /*normal, small-caps*/
+    font-variant: normal;
 }
 
 nav ul {
-    list-style-type: none; /*loetelu markerid*/
+    list-style-type: none;
     margin: 5px;
     padding: 1%;
-    overflow: hidden; /*kuidas näidata nav elemendid*/
+    overflow: hidden;
     background-color: DarkCyan;
 }
 
 nav li {
-    float:  left;
+    float: left;
 }
 
 nav li a {
-    display: block; /*ühe realine navbar*/
+    display: block;
     color: MediumTurquoise;
     text-align: center;
     padding: 14px 16px;
-    text-decoration: underline; /*underline*/
+    text-decoration: underline;
 }
 
-nav li a:hover {  /*link fookuses*/
+nav li a:hover {
     background-color: SeaShell;
 }
 
+/* Minu andmete sektsioon */
+#personal-info {
+    background-color: LightSteelBlue;
+    padding: 10px;
+    border-radius: 10px;
+}
 
+#image-gallery {
+    background-color: LightGoldenrodyellow;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+#images img {
+    margin: 10px;
+}
