--- a/MyStyle.css
+++ b/MyStyle.css
@@ -60,4 +60,25 @@ nav li a:hover { /*link fookuses*/
     background-color: LightSkyBlue;
 }
 
+.night-mode {
+    background-color: #2E2E2E;
+    color: #FFFFFF;
+}
+
+.night-mode header, .night-mode footer {
+    background-color: #1C1C1C;
+    color: #FFD700;
+}
+
+.night-mode nav {
+    background-color: #444444;
+}
+
+.night-mode nav li a {
+    color: #FFFFFF;
+}
+
+.night-mode nav li a:hover {
+    background-color: #888888;
+}
 
